tests/neg/semantic_cast_float_to_pointer_invalid.baa
// EXPECT: التحويل إلى مؤشر يتطلب مؤشراً أو عدداً صحيحاً

صحيح الرئيسية() {
    عشري ف = ١.٥.
    صحيح* م = كـ<صحيح*>(ف).
    إرجع ٠.
}
